Fix: blurry text

--- a/resources/css/navigator.css
+++ b/resources/css/navigator.css
@@ -97,6 +97,9 @@
     left: 0;
     transform-origin: 0 0;
     pointer-events: none;
+    will-change: transform;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .sp-navigator-canvas * {
@@ -109,6 +112,7 @@
     left: 0;
     transform-origin: 0 0;
     pointer-events: none;
+    will-change: transform;
 }
 
 /* =====================================================================
